--- a/docs/_includes/newsletter.html
+++ b/docs/_includes/newsletter.html
@@ -2,7 +2,7 @@
 <div id="mc_embed_signup">
 
 <form action="https://redisconnect.us22.list-manage.com/subscribe/post?u=e6dae50b0e9ff17694cb7f5d2&amp;id=c08408cebd&amp;f_id=0002d6e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self" novalidate="">
-
+	<h2>Get notified when a new collection is coming.</h2>
 	<div class="mc-field-group"><label for="mce-EMAIL">Email Address</label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
 	<div id="mce-responses" class="clear foot">
 		<div class="response" id="mce-error-response" style="display: none;"></div>
